--- a/views/home.hbs
+++ b/views/home.hbs
@@ -5,13 +5,13 @@
                 <i class="fa fa-caret-down"></i>
             </button>
             <div class="dropdown-content">
-                <a href="About">about</a>
+                <a href="About"> About</a>
                 <a href="signIn">Sign in</a>
                 <a href="booking">Booking</a>
             </div>
         </div>
 
-        <a id="home" href="/" class="link">home</a>
+        <a id="home" href="/" class="link">Home</a>
     </div>
 </header>
 <div id="headerHome">
