--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,9 +8,9 @@
     <title>Project Module 2</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="styles/">
+    <link rel="stylesheet" href="stylesheets/">
     {{#each css}}
-    <link rel="stylesheet" href="styles/{{this}}.css">
+    <link rel="stylesheet" href="stylesheets/{{this}}.css">
     {{/each}}
 
     <script type="module" src="js/app.js"></script>
